<resources>
    <string name="bookingId">bookingId</string>
    <string name="fromBDC">fromBDC</string>
    <string name="app_name">MedIQ</string>
    <string name="letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="restrict_special_characters">0123456789</string>
    <string name="numbersWithoutZero">123456789</string>
    <string name="close_app">Close app</string>
    <string name="internet_error">Please connect to internet and try again.</string>
    <string name="is_empty">%s is empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="amountsettle">Amount enter is more then subtotal as your order kindly press ok delete packge amount to enter again</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="upload_image">"Upload Image "</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have account</string>
    <string name="signup">Signup</string>
    <string name="error_password_length">Password is incorrect</string>
    <string name="error_email_format">Invalid email format</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_">Forgot password?</string>
    <string name="forgot_password_heading">Forgot password</string>
    <string name="m_forgot_email_sent">Reset password email sent to your registered email address</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="m_password_change_success">Password changed successfully</string>
    <string name="error_password_not_match">Passwords does not match</string>
    <string name="welcome">Welcome</string>
    <string name="m_login">Can we get some contact details from you? Your contact details will help us in taking care of your health care needs.\n\nAppointments | Homecare | Labs | Pharmacy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verification_code">Verification code</string>
    <string name="are_you_a_health_care_professional">Are you a health care professional?</string>
    <string name="terms_and_condition">I agree to the terms and condition.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="error_mobile_number">Invalid phone number</string>
    <string name="error_phone_incorrect">Your mobile number is incorrect.</string>
    <string name="start_your_journey">Start your journey</string>
    <string name="m_forget">Please enter your mobile number to recover your password. Contact customer support if you are unable to recover.</string>
    <string name="confirm_password_">Confirm password</string>
    <string name="error_confirm_password">Confirm password is too short</string>
    <string name="verification_code_">Verification code</string>
    <string name="error_verification_code">Verification code should be 6 digit</string>
    <string name="error_verification_code_match">Verification code not matched</string>
    <string name="error_city">Please select city</string>
    <string name="verify_code">Verify code</string>
    <string name="thirty_secs">(30 sec)</string>
    <string name="send_code">Send code</string>
    <string name="change_password">Change password</string>
    <string name="error_password_equals">Password &amp; confirm password does not match</string>
    <string name="verify_code_empty">Verification code can not be empty</string>
    <string name="error_mobile_empty">Mobile number can not be empty</string>
    <string name="agree_terms">You must agree to terms and conditions</string>
    <string name="location">Location</string>
    <string name="street">Street</string>
    <string name="floor_unit">Floor / unit #</string>
    <string name="category">Category</string>
    <string name="select_category">Select category</string>
    <string name="other">Other</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="confirm_location">Confirm location</string>
    <string name="view_location">View location</string>
    <string name="personal_profile">Personal profile</string>
    <string name="become_partner">Become a partner</string>
    <string name="partner_profile">Partner profile</string>
    <string name="personal_details">Personal details</string>
    <string name="your_email">Your email</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="add_new">Add new</string>
    <string name="additional_contacts">Additional contacts</string>
    <string name="add_work_exp">Add work experience</string>
    <string name="address_location">Address / Location</string>
    <string name="save">Save</string>
    <string name="basic">Basic</string>
    <string name="family">Family</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="add">Add</string>
    <string name="m_verify_email_code">A code has been sent to your email address</string>
    <string name="m_verify_mobile_code">A code has been sent to your mobile number</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="cancel">Cancel</string>
    <string name="family_connections">Family connections</string>
    <string name="connected">Connected</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="add_connection">Add connection</string>
    <string name="choose_location">Choose location</string>
    <string name="relation">Relation</string>
    <string name="cnic">CNIC</string>
    <string name="CNIC">CNIC</string>
    <string name="error_CNIC">Please enter valid 13 digit CNIC</string>
    <string name="verify_mobile_code">Verification code sent to your number.</string>
    <string name="dr_name">Dr. Ammar Naqvi</string>
    <string name="submit_description">Please submit your partner profile to start using MedIQ as a practitioner. Our team will get back to you in few days.</string>
    <string name="partner_profile_desc">Keeping your partner profile current and up to date will allow patients to learn more about you and your past experiences.</string>
    <string name="what_is_your_profession">What is your profession?</string>
    <string name="doctor">Doctor</string>
    <string name="medical_staff">Medical staff</string>
    <string name="license_code_pmc">License code (PMC)</string>
    <string name="error_license_code_pmc">License code is too short</string>
    <string name="doctor_info">Male | +923100510007 | DoB: 12/12/1995</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="cnic_number">CNIC number</string>
    <string name="upload_cnic"><u>Upload CNIC</u></string>
    <string name="professional_overview_hint">Please enter your details so that we and the patients can know you better.</string>
    <string name="specialties">Specialities</string>
    <string name="work_exp">Work experiences</string>
    <string name="specialties_view">specialtiesView</string>
    <string name="work_exp_view">workExperienceView</string>
    <string name="education_view">educationView</string>
    <string name="education">Education</string>
    <string name="submit_request">Submit request</string>
    <string name="minutes">minutes</string>
    <string name="request_submit">Request submitted</string>
    <string name="professional_overview">Professional overview</string>
    <string name="professional_detail">Professional details</string>
    <string name="upload_pic_cnic">Upload CNIC picture</string>
    <string name="error_cnic">Please enter valid 13 digit CNIC</string>
    <string name="hello_user">Hello [0]\nWe’re here to help you</string>
    <string name="m_opt_doctor">Connect with your doctor using messages, video, home visit and clinic</string>
    <string name="m_opt_pharmacy">Pick up or order your medicine online</string>
    <string name="m_opt_lab_diagnostic">Lorem ipsum here</string>
    <string name="m_opt_home_healthcare">Lorem ipsum here</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="lab_diagnostic">Labs &amp; diagnostics</string>
    <string name="home_healthcare">Home healthcare</string>
    <string name="logout">Logout</string>
    <string name="select_specialities">Select specialities</string>
    <string name="search">Search</string>
    <string name="degree">Degree</string>
    <string name="institute">Institute</string>
    <string name="year">Year</string>
    <string name="months">months</string>
    <string name="document">Documents</string>
    <string name="required">Fill the required fields</string>
    <string name="add_education">Add education</string>
    <string name="pk_cnic_format">_____-_______-_</string>
    <string name="otp_format">___-___</string>
    <string name="are_you_sure_delete">Are you sure you want to delete?</string>
    <string name="delete_message">Are you sure you want to delete messages?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_cart">Are you sure you want to clear cart?</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="pwd_change_success">Password change successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sec">sec</string>
    <string name="permit_manual">Permit Manually</string>
    <string name="close">Close</string>
    <string name="google_map_key">AIzaSyCCE_MGIjwnWVjd2NVdYFD5KA8sVMgQJU8</string>
    <string name="designation">Designation</string>
    <string name="company">Company</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="my_profile">My profile</string>
    <string name="my_connections">My connections</string>
    <string name="my_medical_records">My medical records</string>
    <string name="doctor_messages">Doctor messages</string>
    <string name="my_orders_requests"><![CDATA[My orders & requests]]></string>
    <string name="faq">FAQs</string>
    <string name="logouts">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="un_subscribe">Un Subscribe</string>
    <string name="rs_3_000">Rs. 3,000</string>
    <string name="visit_address">Visit address</string>
    <string name="choose_address_for_consultation">Choose address for consultation</string>
    <string name="reviews">Reviews</string>
    <string name="my_association">My associations</string>
    <string name="my_partner_profile">My partner profile</string>
    <string name="my_appointments">My appointments</string>
    <string name="my_planner">My planner</string>
    <string name="patient_messages">Patient messages</string>
    <string name="reject">Reject</string>
    <string name="write_your_feedback_here">write your feedback here</string>
    <string name="_0_800">0/800</string>
    <string name="mediq_call_ph">MedIQ %s call</string>
    <string name="answer">Answer</string>
    <string name="m_call_dialog_review">Thank you for selecting MedIQ for your health care needs. Please let us know your experience with %s.</string>
    <string name="no_rating">No rating</string>
    <string name="select_language">Select Language</string>
</resources>