<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/mHome"-->
<!--        android:title="@string/home"-->
<!--        android:icon="@drawable/ic_home_black"/>-->
    <item
        android:id="@+id/mPersonalProfile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_face"/>

    <item
        android:id="@+id/mBecomePartner"
        android:title="@string/become_partner"
        android:icon="@drawable/ic_handshake"/>

<!--    <item-->
<!--        android:id="@+id/mPartnerProfile"-->
<!--        android:title="@string/partner_profile"-->
<!--        android:icon="@drawable/ic_face" />-->
    <item
        android:id="@+id/mMyConnections"
        android:title="@string/my_connections"
        android:icon="@drawable/ic_link"/>
    <item
        android:id="@+id/mMyMedicalRecords"
        android:title="@string/my_medical_records"
        android:icon="@drawable/ic_medical_information"/>
    <item
        android:id="@+id/mDoctorMessages"
        android:title="@string/doctor_messages"
        android:icon="@drawable/ic_chat"/>
    <item
        android:id="@+id/mMyOrders"
        android:title="@string/my_orders_requests"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/mMyPartnerProfile"
        android:title="@string/my_partner_profile"
        android:icon="@drawable/ic_person_menu" />
    <item
        android:id="@+id/mAssociation"
        android:title="@string/my_association"
        android:icon="@drawable/ic_link" />
    <item
        android:id="@+id/mMyAppointments"
        android:title="@string/my_appointments"
        android:icon="@drawable/ic_checklist" />
    <item
        android:id="@+id/mMyPlanner"
        android:title="@string/my_planner"
        android:icon="@drawable/ic_note" />
    <item
        android:id="@+id/mPatientMessages"
        android:title="@string/patient_messages"
        android:icon="@drawable/ic_chat" />
    <item
        android:id="@+id/mLanguage"
        android:title="@string/select_language"
        android:icon="@drawable/ic_language_svg" />
    <item
        android:id="@+id/mFaq"
        android:title="@string/faq"
        android:icon="@drawable/ic_help" />
    <item
        android:id="@+id/Contactus"
        android:title="@string/contact_us"
        android:icon="@drawable/contact_us" />

    <item
        android:id="@+id/UnSubscribe"
        android:title="@string/un_subscribe"
        android:icon="@drawable/ic_baseline_logout" />

    <item
        android:id="@+id/mlogout"
        android:title="@string/logouts"
        android:icon="@drawable/ic_baseline_logout"
        />

</menu>