<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@string/dr_name" />

    <TextView
        android:id="@+id/tvDesc"
        style="@style/TextAppearance.Compat.Notification.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginTop="2dp"
        android:text="@string/mediq_call_ph" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/bReject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/call_red"
            android:insetTop="@dimen/dp0"
            android:insetBottom="@dimen/dp0"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:text="@string/reject" />

        <Button
            android:id="@+id/bAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/call_green"
            android:insetTop="@dimen/dp0"
            android:insetBottom="@dimen/dp0"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            android:text="@string/answer" />

    </LinearLayout>

</LinearLayout>