<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp24"
        android:paddingTop="@dimen/dp10">

        <TextView
            android:id="@+id/tvDesc"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="@string/m_call_dialog_review"
            android:layout_marginTop="@dimen/dp8" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etInstructions"
            style="@style/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:minLines="4"
            android:maxLines="4"
            android:maxLength="800"
            android:background="@drawable/rounded_grey"
            android:hint="@string/write_your_feedback_here"
            android:padding="@dimen/dp16" />

        <LinearLayout
            android:id="@+id/llReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp8">

            <TextView
                style="@style/heading_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp16"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvLength"
                style="@style/label_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_800"
                android:textColor="@color/primary30"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp16"
            android:layout_gravity="center"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize=".5"
            android:progressTint="@color/orange" />

    </LinearLayout>
</layout>