<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="langData"
            type="com.homemedics.app.firebase.RemoteConfigLanguage" />

        <variable
            name="workItem"
            type="com.fatron.network_module.models.request.partnerprofile.WorkExperience" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.homemedics.app.ui.custom.CustomActionbar
            android:id="@+id/customActionbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:action2Res="@drawable/ic_cross_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <com.homemedics.app.ui.custom.CustomDefaultEditText
            android:id="@+id/etCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:hint="@string/company"
            android:inputType="text"
            android:text="@={workItem.company}"
            app:drawableStart="@drawable/ic_apartment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customActionbar" />

        <com.homemedics.app.ui.custom.CustomDefaultEditText
            android:id="@+id/etDesignation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:hint="@string/designation"
            android:inputType="text"
            android:text="@={workItem.designation}"
            app:drawableStart="@drawable/ic_adjust"
            app:layout_constraintEnd_toEndOf="@id/etCompany"
            app:layout_constraintStart_toStartOf="@id/etCompany"
            app:layout_constraintTop_toBottomOf="@+id/etCompany" />

        <com.homemedics.app.ui.custom.CustomDefaultEditText
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:clickable="true"
            android:hint="@string/start_date"
            android:inputType="none"
            android:text="@={workItem.startDate}"
            app:click="true"
            app:drawable="@drawable/ic_calendar"
            app:drawableStart="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/etCompany"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etCompany"
            app:layout_constraintTop_toBottomOf="@+id/etDesignation"
            app:textColorCheck="false" />

        <com.homemedics.app.ui.custom.CustomDefaultEditText
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:clickable="true"
            android:hint="@string/end_date"
            android:inputType="none"
            android:text="@={workItem.endDate}"
            app:click="true"
            app:drawable="@drawable/ic_calendar"
            app:drawableStart="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/etCompany"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etCompany"
            app:layout_constraintTop_toBottomOf="@+id/startDate"
            app:textColorCheck="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSave"
            style="@style/button_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{langData.globalString.save}"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>